--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,6 @@
 	<artifactId>server</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>server</name>
-	<packaging>war</packaging>
 	<description>Server for apps of Mabrur</description>
 	<properties>
 		<java.version>1.8</java.version>
@@ -23,11 +22,11 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 			<scope>provided</scope>
-		</dependency>
+		</dependency> -->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -43,7 +42,6 @@
 	</dependencies>
 
 	<build>
-	<finalName>mabrur</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
