--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 
+
+# spring.datasource.url=jdbc:mysql://localhost:3306/mabrur_server
+# spring.datasource.username=root
+# spring.datasource.password=root
+# spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+
+spring.datasource.url=jdbc:mysql://us-cdbr-east-05.cleardb.net:3306/heroku_953b85d277f4de5
+spring.datasource.username=bd502fd68feb20
+spring.datasource.password=d5563c3a
+spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql: true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
