--- a/pom.xml
+++ b/pom.xml
@@ -37,9 +37,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
+			<scope>runtime</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
@@ -50,6 +53,10 @@
 			<artifactId>lombok</artifactId>
 			<scope>compile</scope>
 		</dependency>
+
+		
+
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -91,6 +98,12 @@
 			<version>6.0.10.Final</version>
 		</dependency> -->
 
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.9.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
