--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,13 +11,15 @@ spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 # spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql: true
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type=TRACE
+# spring.jpa.show-sql: true
+# logging.level.org.hibernate.SQL=DEBUG
+# logging.level.org.hibernate.type=TRACE
 
 
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
+
+server.error.include-binding-errors=always
 
 bezkoder.app.jwtSecret= bezKoderSecretKey
 bezkoder.app.jwtExpirationMs= 86400000
